--- a/about.html
+++ b/about.html
@@ -20,8 +20,11 @@
 		<h1>
 		About
 		</h1>
-
 		</div>
+
+    <div class='about-img'>
+    <img src='teddysouth.github.io/assets/meettheartist_orange.png';
+    </div>
 
 		<div class='about-body'>
       <p1>
@@ -31,6 +34,8 @@
        is a graphic artist, designer, developer, and illustrator, based in the south-west of England.
       </p2>
 		</div>
+
+
 
 		<div class='main-footer'>
 			<p>
