--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
 		</div>
 
     <div class='about-img'>
-    <img src='teddysouth.github.io/assets/meettheartist_orange.png';
+      <img src='teddysouth.github.io/assets/meettheartist.png'>
     </div>
 
 		<div class='about-body'>
@@ -31,7 +31,7 @@
       TESOU
       </p1>
       <p2>
-       is a graphic artist, designer, developer, and illustrator, based in the south-west of England.
+       is a graphic artist, designer, and developer, based in the south-west of England.
       </p2>
 		</div>
 
