--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
 		</div>
 
     <div class='about-img'>
-      <img src='teddysouth.github.io/assets/hhh.png'>
+      <img src='teddysouth.github.io/assets/hhh.jpg'>
     </div>
 
 		<div class='about-body'>
