--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="main.css"/>
-	<title>TESOU</title>
+	<link href="https://fonts.googleapis.com/css?family=Chewy|Open+Sans" rel="stylesheet">
+	<title>Percy Community Centre</title>
 </head>
 
 <body>
@@ -11,26 +12,32 @@
 			<li><a href="index.html">Home</a></li>
 				<li><a href="about.html">About</a></li>
 					<li><a href="">Contact</a></li>
-						<li><a href="">Links</a></li>
-							<li><a href="">Blog</a></li>
+						<li><a href="">Bookings</a></li>
+							<li><a href="">Links</a></li>
 		</ul>
 </div>
 
 	<div class='main-title'>
 		<h1>
-		TESOU
+		Percy Community Centre
 		</h1>
 		</div>
 
 		<div class='main-body'>
 			<p>
-
+				The Percy Centre is a vibrant and friendly community centre lcated in the heart of Bath.
+				<br>Community resources for personal development and extracurricular activities for all ages -
+				<br> youth projects, music and holiday play groups and much more!
 			</p>
+
+			<p1>
+				Room hire from 9/hr.
+			</p1>
 		</div>
 
 		<div class='main-footer'>
 			<p>
-				&copy; Copyright Teddy South 2016
+				&copy; Copyright Teddy South 2017
 			</p>
 		</div>
 
