--- a/about-main.html
+++ b/about-main.html
@@ -12,27 +12,29 @@
 			<li><a href="index.html">Home</a></li>
 				<li><a href="findus.html">Find Us</a></li>
 					<li><a href="contact.html">Contact</a></li>
-						<li><a href="about-main.html">About</a></li>
+					<li><a href="about-main.html">About</a></li>
 							<li><a href="">Links</a></li>
 		</ul>
 </div>
 
 	<div class='main-title'>
 		<h1>
-		Percy Community Centre
+		About the Centre
 		</h1>
 		</div>
 
 		<div class='main-body'>
 			<p>
-				The Percy Centre is a vibrant and friendly community centre lcated in the heart of Bath.
-				<br>Community resources for personal development and extracurricular activities for all ages -
-				<br> youth projects, music, dance, and holiday play groups and much more!
+			The Percy Community Centre, formerly the Percy Boys Club... [etc]<br>
+			The Centre was founded in ... [etc]<br>
+			</p>
+			<p>
+			The Percy Centre is a hub for community events, extracurricular activity<br>
+			and personal development for people of all ages and from all walks of life.
 			</p>
 
-			<p1>
-				Room hire from 9/hr.
-			</p1>
+
+
 		</div>
 
 		<div class='main-footer'>
