--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="main.css"/>
 	<link href="https://fonts.googleapis.com/css?family=Chewy|Open+Sans" rel="stylesheet">
-	<title>Percy Community Centre</title>
+	<title>Contact us</title>
 </head>
 
 <body>
@@ -12,27 +12,47 @@
 			<li><a href="index.html">Home</a></li>
 				<li><a href="findus.html">Find Us</a></li>
 					<li><a href="contact.html">Contact</a></li>
-						<li><a href="about-main.html">About</a></li>
+          <li><a href="about-main.html">About</a></li>
 							<li><a href="">Links</a></li>
 		</ul>
 </div>
 
 	<div class='main-title'>
 		<h1>
-		Percy Community Centre
+		Contact us:
 		</h1>
 		</div>
 
-		<div class='main-body'>
-			<p>
-				The Percy Centre is a vibrant and friendly community centre lcated in the heart of Bath.
-				<br>Community resources for personal development and extracurricular activities for all ages -
-				<br> youth projects, music, dance, and holiday play groups and much more!
-			</p>
+		<div class='contact-body'>
 
-			<p1>
-				Room hire from 9/hr.
-			</p1>
+      <p>
+        For general inquiries:
+  		</p>
+  		<h2>
+  			info@percycentre.org.uk
+  		</h2>
+
+
+      <p>
+        For bookings and room hire:
+  		</p>
+  		<h2>
+  			administrator@percycentre.org.uk
+  		</h2>
+
+      <p>
+        For website inquiries:
+      </p>
+      <h2>
+        teddy@percycentre.org.uk
+      </h2>
+
+      <p>
+        or give us a ring on:
+      </p>
+      <h2>
+        01223 423014
+
 		</div>
 
 		<div class='main-footer'>
