--- a/findus.html
+++ b/findus.html
@@ -3,7 +3,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="main.css"/>
 	<link href="https://fonts.googleapis.com/css?family=Chewy|Open+Sans" rel="stylesheet">
-	<title>Percy Community Centre</title>
+	<title>Where to find us</title>
 </head>
 
 <body>
@@ -12,27 +12,26 @@
 			<li><a href="index.html">Home</a></li>
 				<li><a href="findus.html">Find Us</a></li>
 					<li><a href="contact.html">Contact</a></li>
-						<li><a href="about-main.html">About</a></li>
+					<li><a href="about-main.html">About</a></li>
 							<li><a href="">Links</a></li>
 		</ul>
 </div>
 
 	<div class='main-title'>
 		<h1>
-		Percy Community Centre
+		Where to find us:
 		</h1>
 		</div>
 
 		<div class='main-body'>
 			<p>
-				The Percy Centre is a vibrant and friendly community centre lcated in the heart of Bath.
-				<br>Community resources for personal development and extracurricular activities for all ages -
-				<br> youth projects, music, dance, and holiday play groups and much more!
+				The Percy Centre is a bit tucked away, but we're easy to find!
 			</p>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2490.1182345797038!2d-2.368269684230037!3d51.38250497961488!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48718115967b4681%3A0x2a255513b91dcd82!2sPercy+Community+Centre!5e0!3m2!1sen!2suk!4v1490111672751" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+		</div>
 
-			<p1>
-				Room hire from 9/hr.
-			</p1>
+		<div class='map-widget'>
+
 		</div>
 
 		<div class='main-footer'>
