--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 				<li><a href="findus.html">Find Us</a></li>
 					<li><a href="contact.html">Contact</a></li>
           <li><a href="about-main.html">About</a></li>
-							<li><a href="">Links</a></li>
+            <li><a href="links.html">Links</a></li>
 		</ul>
 </div>
 
