--- a/findus.html
+++ b/findus.html
@@ -13,7 +13,7 @@
 				<li><a href="findus.html">Find Us</a></li>
 					<li><a href="contact.html">Contact</a></li>
 					<li><a href="about-main.html">About</a></li>
-							<li><a href="">Links</a></li>
+						<li><a href="links.html">Links</a></li>
 		</ul>
 </div>
 
@@ -23,15 +23,14 @@
 		</h1>
 		</div>
 
-		<div class='main-body'>
+		<div class='findus-body'>
 			<p>
 				The Percy Centre is a bit tucked away, but we're easy to find!
 			</p>
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2490.1182345797038!2d-2.368269684230037!3d51.38250497961488!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48718115967b4681%3A0x2a255513b91dcd82!2sPercy+Community+Centre!5e0!3m2!1sen!2suk!4v1490111672751" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 		</div>
 
 		<div class='map-widget'>
-
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2490.1182345797038!2d-2.368269684230037!3d51.38250497961488!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48718115967b4681%3A0x2a255513b91dcd82!2sPercy+Community+Centre!5e0!3m2!1sen!2suk!4v1490111672751" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 		</div>
 
 		<div class='main-footer'>
