--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				<li><a href="findus.html">Find Us</a></li>
 					<li><a href="contact.html">Contact</a></li>
 						<li><a href="about-main.html">About</a></li>
-							<li><a href="">Links</a></li>
+							<li><a href="links.html">Links</a></li>
 		</ul>
 </div>
 
@@ -37,8 +37,7 @@
 
 		<div class='main-footer'>
 			<p>
-				&copy; Copyright Teddy South 2017
-			</p>
+				&copy; 2010<script>new Date().getFullYear()>2016&&document.write("-"+new Date().getFullYear());</script>, Percy Community Centre.			</p>
 		</div>
 
 </body>
