--- a/links.html
+++ b/links.html
@@ -12,26 +12,18 @@
 			<li><a href="index.html">Home</a></li>
 				<li><a href="findus.html">Find Us</a></li>
 					<li><a href="contact.html">Contact</a></li>
-					<li><a href="about-main.html">About</a></li>
-						<li><a href="links.html">Links</a></li>
+						<li><a href="about-main.html">About</a></li>
+							<li><a href="links.html">Links</a></li>
 		</ul>
 </div>
 
 	<div class='main-title'>
 		<h1>
-		About the Centre
+		Our other sites:
 		</h1>
 		</div>
 
 		<div class='main-body'>
-			<p>
-			The Percy Community Centre, formerly the Percy Boys Club... [etc]<br>
-			The Centre was founded in ... [etc]<br>
-			</p>
-			<p>
-			The Percy Centre is a hub for community events, extracurricular activity<br>
-			and personal development for people of all ages and from all walks of life.
-			</p>
 
 
 
