--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 				<li><a href="findus.html">Find Us</a></li>
 					<li><a href="contact.html">Contact</a></li>
 						<li><a href="about-main.html">About</a></li>
-							<li><a href="links.html">Links</a></li>
 		</ul>
 </div>
 
@@ -27,12 +26,15 @@
 			<p>
 				The Percy Centre is a vibrant and friendly community centre lcated in the heart of Bath.
 				<br>Community resources for personal development and extracurricular activities for all ages -
-				<br> youth projects, music, dance, and holiday play groups and much more!
+				<br> youth projects, music, dance, holiday play groups - <br>
 			</p>
-
-			<p1>
-				Room hire from 9/hr.
-			</p1>
+				<p1>
+					and so much more!
+				</p1>
+				<br>
+					<p2>
+						Room hire from 9/hr.
+					</p2>
 		</div>
 
 		<div class='main-footer'>
