--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
 		</div>
 
 		<div class='main-body'>
-			<p>
 				The Percy Centre is a vibrant and friendly community centre lcated in the heart of Bath.
-				<br>Community resources for personal development and extracurricular activities for all ages -
-				<br> youth projects, music, dance, holiday play groups - <br>
-			</p>
+				Community resources for personal development and extracurricular activities for all ages -
+				youth projects, music, dance, holiday play groups -
+			</div>
+
+			<div class='main-tagline'>
 				<p1>
 					and so much more!
 				</p1>
@@ -35,7 +36,7 @@
 					<p2>
 						Room hire from 9/hr.
 					</p2>
-		</div>
+				</div>
 
 		<div class='main-footer'>
 			<p>
