--- a/findus.html
+++ b/findus.html
@@ -12,7 +12,7 @@
 			<li><a href="index.html">Home</a></li>
 				<li><a href="findus.html">Find Us</a></li>
 					<li><a href="contact.html">Contact</a></li>
-					<li><a href="about-main.html">About</a></li>
+						<li><a href="about-main.html">About</a></li>
 		</ul>
 </div>
 
@@ -24,7 +24,7 @@
 
 		<div class='findus-body'>
 			<p>
-				The Percy Centre is a bit tucked away, but we're easy to find!
+				The Percy Centre is a bit tucked away, but we're easy to find if you know where to look!
 			</p>
 		</div>
 
