--- a/about-staff.html
+++ b/about-staff.html
@@ -24,22 +24,26 @@
 
 	<div class='main-title'>
 		<h1>
-		About the Centre
+		About our Staff
 		</h1>
 		</div>
 
 		<div class='main-body'>
 			<p>
-			The Percy Community Centre, formerly the Percy Boys Club... [etc]<br>
-			The Centre was founded in ... [etc]<br>
+			Our Staff are the beating heart of the community centre, and make sure everything keeps ticking over!
 			</p>
-			<p>
-			The Percy Centre is a hub for community events, extracurricular activity<br>
-			and personal development for people of all ages and from all walks of life.
-			</p>
+		</div>
 
+		<div class='about-staff-trustees'>
+			<h2>
+				The Board of Trustees
+			</h2>
+		</div>
 
-
+		<div class='about-staff-office'>
+			<h2>
+				Office Staff
+			</h2>
 		</div>
 
 		<div class='main-footer'>
