--- a/index.html
+++ b/index.html
@@ -8,13 +8,20 @@
 
 <body>
 <div class='main-nav'>
-		<ul>
-			<li><a href="index.html">Home</a></li>
-				<li><a href="findus.html">Find Us</a></li>
-					<li><a href="contact.html">Contact</a></li>
-						<li><a href="about-main.html">About</a></li>
-		</ul>
+	<ul>
+		<li><a href="index.html">Home</a></li>
+			<li><a href="findus.html">Find Us</a></li>
+				<li><a href="contact.html">Contact</a></li>
+  				<li class="dropdown">
+    				<a href="#" class="dropbtn">About</a>
+				    <div class="dropdown-content">
+					    <a href="about-main.html">The Centre</a>
+					    <a href="about-staff.html">The Staff</a>
+    				</div>
+  				</li>
+	</ul>
 </div>
+
 
 	<div class='main-title'>
 		<h1>
