What's on social feeds
Adds whats on pages and social media integration

--- a/findus.html
+++ b/findus.html
@@ -12,14 +12,15 @@
 			<li><a href="index.html">Home</a></li>
 				<li><a href="findus.html">Find Us</a></li>
 					<li><a href="contact.html">Contact</a></li>
-	  				<li class="dropdown">
-	    				<a href="#" class="dropbtn">About</a>
-					    <div class="dropdown-content">
-						    <a href="about-main.html">The Centre</a>
-						    <a href="about-staff.html">The Staff</a>
-	    				</div>
+						<li><a href="whats-on.html">What's On</a></li>
+		  				<li class="dropdown">
+		    				<a href="#" class="dropbtn">About</a>
+						    <div class="dropdown-content">
+							    <a href="about-main.html">The Centre</a>
+							    <a href="about-staff.html">The Staff</a>
+		    				</div>
 	  				</li>
-		</ul>
+			</ul>
 	</div>
 
 	<div class='main-title'>
@@ -40,7 +41,7 @@
 
 		<div class='main-footer'>
 			<p>
-				&copy; Copyright Teddy South 2017
+				&copy; 2016<script>new Date().getFullYear()>2016&&document.write("-"+new Date().getFullYear());</script>, Percy Community Centre.			</p>
 			</p>
 		</div>
 
