--- a/index.html
+++ b/index.html
@@ -7,20 +7,21 @@
 </head>
 
 <body>
-<div class='main-nav'>
-	<ul>
-		<li><a href="index.html">Home</a></li>
-			<li><a href="findus.html">Find Us</a></li>
-				<li><a href="contact.html">Contact</a></li>
-  				<li class="dropdown">
-    				<a href="#" class="dropbtn">About</a>
-				    <div class="dropdown-content">
-					    <a href="about-main.html">The Centre</a>
-					    <a href="about-staff.html">The Staff</a>
-    				</div>
-  				</li>
-	</ul>
-</div>
+	<div class='main-nav'>
+		<ul>
+			<li><a href="index.html">Home</a></li>
+				<li><a href="findus.html">Find Us</a></li>
+					<li><a href="contact.html">Contact</a></li>
+						<li><a href="whats-on.html">What's On</a></li>
+		  				<li class="dropdown">
+		    				<a href="#" class="dropbtn">About</a>
+						    <div class="dropdown-content">
+							    <a href="about-main.html">The Centre</a>
+							    <a href="about-staff.html">The Staff</a>
+		    				</div>
+	  				</li>
+			</ul>
+	</div>
 
 
 	<div class='main-title'>
@@ -47,7 +48,7 @@
 
 		<div class='main-footer'>
 			<p>
-				&copy; 2010<script>new Date().getFullYear()>2016&&document.write("-"+new Date().getFullYear());</script>, Percy Community Centre.			</p>
+				&copy; 2016<script>new Date().getFullYear()>2016&&document.write("-"+new Date().getFullYear());</script>, Percy Community Centre.			</p>
 		</div>
 
 </body>
