Final commit for the day
Tidies up what's on page and css

--- a/about-main.html
+++ b/about-main.html
@@ -3,7 +3,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="main.css"/>
 	<link href="https://fonts.googleapis.com/css?family=Chewy|Open+Sans" rel="stylesheet">
-	<title>Percy Community Centre</title>
+	<title>About the Centre</title>
 </head>
 
 <body>
