--- a/whats-on.html
+++ b/whats-on.html
@@ -1,33 +1,33 @@
 <!doctype html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="main.css"/>
-	<link href="https://fonts.googleapis.com/css?family=Chewy|Open+Sans" rel="stylesheet">
+	<link rel='stylesheet' type='text/css' href='main.css'/>
+	<link href='https://fonts.googleapis.com/css?family=Chewy|Open+Sans' rel='stylesheet'>
 	<title>Whats on</title>
 </head>
 
 <body>
 
-	<div id="fb-root"></div>
+	<div id='fb-root'></div>
 	<script>(function(d, s, id) {
 	  var js, fjs = d.getElementsByTagName(s)[0];
 	  if (d.getElementById(id)) return;
 	  js = d.createElement(s); js.id = id;
-	  js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.8";
+	  js.src = '//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.8';
 	  fjs.parentNode.insertBefore(js, fjs);
 	}(document, 'script', 'facebook-jssdk'));</script>
 
 <div class='main-nav'>
 	<ul>
-		<li><a href="index.html">Home</a></li>
-			<li><a href="findus.html">Find Us</a></li>
-				<li><a href="contact.html">Contact</a></li>
-					<li><a href="whats-on.html">What's On</a></li>
-	  				<li class="dropdown">
-	    				<a href="#" class="dropbtn">About</a>
-					    <div class="dropdown-content">
-						    <a href="about-main.html">The Centre</a>
-						    <a href="about-staff.html">The Staff</a>
+		<li><a href='index.html'>Home</a></li>
+			<li><a href='findus.html'>Find Us</a></li>
+				<li><a href='contact.html'>Contact</a></li>
+					<li><a href='whats-on.html'>What's On</a></li>
+	  				<li class='dropdown'>
+	    				<a href='#' class='dropbtn'>About</a>
+					    <div class='dropdown-content'>
+						    <a href='about-main.html'>The Centre</a>
+						    <a href='about-staff.html'>The Staff</a>
 	    				</div>
   				</li>
 		</ul>
@@ -44,35 +44,34 @@
 			There's always something going on at the Centre! Follow us on facebook or twitter to get updates about events and local colour!
 		</div>
 
-		<div class='twitter-timeline'
-			<a class="twitter-widget"
-			data-width="500"
-			data-height="500"
-			data-link-color="#54b4ff"
-			<a class='' href="https://twitter.com/PercyCentre"> Tweets by PercyCentre </a>
-			<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-		</div>
+		<a class='twitter-timeline'
+			data-width='500'
+			data-height='500'
+			data-link-color='#54b4ff'
+			<a class='' href='https://twitter.com/PercyCentre'> Tweets by PercyCentre </a>
+			<script async src='//platform.twitter.com/widgets.js' charset='utf-8'></script>
+		</a>
 
 		<div class='facebook-feed'
 			data-href='https://www.facebook.com/percycentre/'
 			data-tabs='timeline'
 			data-width='500'
-			data-height="500"
-			data-small-header="true"
-			data-adapt-container-width="true"
-			data-hide-cover="true"
-			data-show-facepile="true">
+			data-height='500'
+			data-small-header='true'
+			data-adapt-container-width='true'
+			data-hide-cover='true'
+			data-show-facepile='true'>
 
 			<blockquote cite='https://www.facebook.com/percycentre/'
-			class="fb-xfbml-parse-ignore">
-			<a href="https://www.facebook.com/percycentre/">Percy Community Centre</a>
+			class='fb-xfbml-parse-ignore'>
+			<a href='https://www.facebook.com/percycentre/''>Percy Community Centre</a>
 			</blockquote>
 		</div>
 
 
 		<div class='main-footer'>
 			<p>
-				&copy; 2016<script>new Date().getFullYear()>2016&&document.write("-"+new Date().getFullYear());</script>, Percy Community Centre.			</p>
+				&copy; 2016<script>new Date().getFullYear()>2016&&document.write('-'+new Date().getFullYear());</script>, Percy Community Centre.			</p>
 		</div>
 
 </body>
