Fixes bug with timelines

--- a/whats-on.html
+++ b/whats-on.html
@@ -3,7 +3,7 @@
 <head>
 	<link rel='stylesheet' type='text/css' href='main.css'/>
 	<link href='https://fonts.googleapis.com/css?family=Chewy|Open+Sans' rel='stylesheet'>
-	<title>Whats on</title>
+	<title>What's on?</title>
 </head>
 
 <body>
@@ -64,7 +64,7 @@
 
 			<blockquote cite='https://www.facebook.com/percycentre/'
 			class='fb-xfbml-parse-ignore'>
-			<a href='https://www.facebook.com/percycentre/''>Percy Community Centre</a>
+			<a href='https://www.facebook.com/percycentre/'>Percy Community Centre</a>
 			</blockquote>
 		</div>
 
