--- a/whats-on.html
+++ b/whats-on.html
@@ -8,12 +8,12 @@
 
 <body>
 
-	<div id='fb-root'></div>
+	<div id="fb-root"></div>
 	<script>(function(d, s, id) {
 	  var js, fjs = d.getElementsByTagName(s)[0];
 	  if (d.getElementById(id)) return;
 	  js = d.createElement(s); js.id = id;
-	  js.src = '//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.8';
+	  js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.8";
 	  fjs.parentNode.insertBefore(js, fjs);
 	}(document, 'script', 'facebook-jssdk'));</script>
 
@@ -44,30 +44,17 @@
 			There's always something going on at the Centre! Follow us on facebook or twitter to get updates about events and local colour!
 		</div>
 
-		<a class='twitter-timeline'
-			data-width='500'
-			data-height='500'
-			data-link-color='#54b4ff'
-			<a class='' href='https://twitter.com/PercyCentre'> Tweets by PercyCentre </a>
-			<script async src='//platform.twitter.com/widgets.js' charset='utf-8'></script>
-		</a>
+		<div class='whatson-widgets'>
+			<a class='twitter-timeline'
+				data-width='500'
+				data-height='500'
+				data-link-color='#54b4ff'
+				<a class='' href='https://twitter.com/PercyCentre'> Tweets by PercyCentre </a>
+				<script async src='//platform.twitter.com/widgets.js' charset='utf-8'></script>
+			</a>
 
-		<div class='facebook-feed'
-			data-href='https://www.facebook.com/percycentre/'
-			data-tabs='timeline'
-			data-width='500'
-			data-height='500'
-			data-small-header='true'
-			data-adapt-container-width='true'
-			data-hide-cover='true'
-			data-show-facepile='true'>
-
-			<blockquote cite='https://www.facebook.com/percycentre/'
-			class='fb-xfbml-parse-ignore'>
-			<a href='https://www.facebook.com/percycentre/'>Percy Community Centre</a>
-			</blockquote>
+			<div class="fb-page" data-href="https://www.facebook.com/percycentre/" data-tabs="timeline" data-width="500" data-height="500" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="true"><blockquote cite="https://www.facebook.com/percycentre/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/percycentre/">Percy Community Centre</a></blockquote></div>
 		</div>
-
 
 		<div class='main-footer'>
 			<p>
