General polish to the site dimensions
adds a few pieces to the 'about' pages
adds new about-facilities page

--- a/about-facilities.html
+++ b/about-facilities.html
@@ -3,7 +3,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="main.css"/>
 	<link href="https://fonts.googleapis.com/css?family=Chewy|Open+Sans" rel="stylesheet">
-	<title>About our Staff</title>
+	<title>About the Centre</title>
 </head>
 
 <body>
@@ -26,26 +26,19 @@
 
 	<div class='main-title'>
 		<h1>
-		About our Staff
+		About our Facilities
 		</h1>
 		</div>
 
 		<div class='main-body'>
 			<p>
-			Our Staff are the beating heart of the community centre, and make sure everything keeps ticking over!
-			</p>
-		</div>
+			The Percy Centre is comprised of several indoor spaces suited for a range of different activities - as well as an external annex and Multi-Use Games Court.
+      You can find a full list of all rooms available for bookings below.
+      </p>
 
-		<div class='about-staff-trustees'>
-			<h2>
-				The Board of Trustees
-			</h2>
-		</div>
 
-		<div class='about-staff-office'>
-			<h2>
-				Office Staff
-			</h2>
+
+
 		</div>
 
 		<div class='main-footer'>
