--- a/about-main.html
+++ b/about-main.html
@@ -16,8 +16,9 @@
 		  				<li class="dropdown">
 		    				<a href="#" class="dropbtn">About</a>
 						    <div class="dropdown-content">
-							    <a href="about-main.html">The Centre</a>
-							    <a href="about-staff.html">The Staff</a>
+							    <a href="about-main.html">Our History</a>
+							    <a href="about-staff.html">Our Staff</a>
+							    <a href="about-facilities.html">Our Facilities</a>
 		    				</div>
 	  				</li>
 			</ul>
@@ -30,14 +31,23 @@
 		</div>
 
 		<div class='main-body'>
+			<h2>
+				The Past
+			</h2>
 			<p>
 			The Percy Community Centre, formerly the Percy Boys Club... [etc]<br>
 			The Centre was founded in ... [etc]<br>
 			</p>
+			<h2>
+				The Present
+			</h2>
 			<p>
 			The Percy Centre is a hub for community events, extracurricular activity<br>
 			and personal development for people of all ages and from all walks of life.
 			</p>
+			<h2>
+				The Future
+			</h2>
 
 
 
