--- a/findus.html
+++ b/findus.html
@@ -16,8 +16,9 @@
 		  				<li class="dropdown">
 		    				<a href="#" class="dropbtn">About</a>
 						    <div class="dropdown-content">
-							    <a href="about-main.html">The Centre</a>
-							    <a href="about-staff.html">The Staff</a>
+							    <a href="about-main.html">Our History</a>
+							    <a href="about-staff.html">Our Staff</a>
+							    <a href="about-facilities.html">Our Facilities</a>
 		    				</div>
 	  				</li>
 			</ul>
