--- a/whats-on.html
+++ b/whats-on.html
@@ -17,21 +17,22 @@
 	  fjs.parentNode.insertBefore(js, fjs);
 	}(document, 'script', 'facebook-jssdk'));</script>
 
-<div class='main-nav'>
-	<ul>
-		<li><a href='index.html'>Home</a></li>
-			<li><a href='findus.html'>Find Us</a></li>
-				<li><a href='contact.html'>Contact</a></li>
-					<li><a href='whats-on.html'>What's On</a></li>
-	  				<li class='dropdown'>
-	    				<a href='#' class='dropbtn'>About</a>
-					    <div class='dropdown-content'>
-						    <a href='about-main.html'>The Centre</a>
-						    <a href='about-staff.html'>The Staff</a>
-	    				</div>
-  				</li>
-		</ul>
-</div>
+	<div class='main-nav'>
+		<ul>
+			<li><a href="index.html">Home</a></li>
+				<li><a href="findus.html">Find Us</a></li>
+					<li><a href="contact.html">Contact</a></li>
+						<li><a href="whats-on.html">What's On</a></li>
+		  				<li class="dropdown">
+		    				<a href="#" class="dropbtn">About</a>
+						    <div class="dropdown-content">
+							    <a href="about-main.html">Our History</a>
+							    <a href="about-staff.html">Our Staff</a>
+							    <a href="about-facilities.html">Our Facilities</a>
+		    				</div>
+	  				</li>
+			</ul>
+	</div>
 
 
 	<div class='main-title'>
