Final commit for the day
Facilities description

--- a/about-facilities.html
+++ b/about-facilities.html
@@ -32,13 +32,13 @@
 
 		<div class='main-body'>
 			<p>
-			The Percy Centre is comprised of several indoor spaces suited for a range of different activities - as well as an external annex and Multi-Use Games Court.
-      You can find a full list of all rooms available for bookings below.
-      </p>
-
-
-
-
+				The Percy Centre has something for everyone. Our wide range of facilities offers a huge number of classes and activities; from sports and exercise, to workshops, music, and kid’s groups.
+				There are classes for most ages and abilities, without the need for membership fees or annual sign up.
+				Many classes offer free trial sessions so it’s an ideal way to find what you like.
+				We also work alongside our many supporters to provide free activities for children, young people and other groups.
+				We have meeting spaces, conference facilities, and both indoor and outdoor sports courts available for hire.
+				With a great range of IT and presentation equipment, catering and helpful staff on site, the Percy Centre is a great venue for meetings, events and parties.
+			</p>
 		</div>
 
 		<div class='main-footer'>
