Reworking the navbar
Adds new nav components / dropdowns

--- a/findus.html
+++ b/findus.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="main.css"/>
-	<link href="https://fonts.googleapis.com/css?family=Chewy|Open+Sans" rel="stylesheet">
+	<link href='https://fonts.googleapis.com/css?family=Fredoka+One|Open+Sans|Work+Sans|PT+Sans|Varela+Round' rel='stylesheet'>
 	<title>Where to find us</title>
 </head>
 
@@ -26,7 +26,7 @@
 
 	<div class='main-title'>
 		<h1>
-		Where to find us:
+		Where to find us
 		</h1>
 		</div>
 
