--- a/whats-on.html
+++ b/whats-on.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel='stylesheet' type='text/css' href='main.css'/>
-	<link href='https://fonts.googleapis.com/css?family=Chewy|Open+Sans' rel='stylesheet'>
+	<link href='https://fonts.googleapis.com/css?family=Fredoka+One|Open+Sans|Work+Sans|PT+Sans|Varela+Round' rel='stylesheet'>
 	<title>What's on?</title>
 </head>
 
@@ -19,18 +19,27 @@
 
 	<div class='main-nav'>
 		<ul>
-			<li><a href="index.html">Home</a></li>
-				<li><a href="findus.html">Find Us</a></li>
-					<li><a href="contact.html">Contact</a></li>
-						<li><a href="whats-on.html">What's On</a></li>
-		  				<li class="dropdown">
-		    				<a href="#" class="dropbtn">About</a>
-						    <div class="dropdown-content">
-							    <a href="about-main.html">Our History</a>
-							    <a href="about-staff.html">Our Staff</a>
-							    <a href="about-facilities.html">Our Facilities</a>
-		    				</div>
-	  				</li>
+			<li><a href='index.html'>Home</a></li>
+				<li><a href='findus.html'>Find Us</a></li>
+					<li><a href='contact.html'>Contact</a></li>
+						<li><a href='whats-on.html'>What's On</a></li>
+							<li class='dropdown'>
+								<a href='#' class='about-button'>About</a>
+								<div class='dropdown-content'>
+									<a href='about-main.html'>Our History</a>
+									<a href='about-staff.html'>Our Staff</a>
+									<a href='about-staff.html'>The Facilities</a>
+								</div>
+							<li class='dropdown'>
+								<a href='#' class='facilities-button'>Room Hire</a>
+								<div class='dropdown-content'>
+									<a href='#'>Conference Room</a>
+									<a href='#'>Meeting Room</a>
+									<a href='#'>Recording Studio</a>
+									<a href='#'>Media Suite</a>
+									<a href='#'>Sports Hall</a>
+									<a href='#'>MUGA</a>
+						</li>
 			</ul>
 	</div>
 
