--- a/index.html
+++ b/index.html
@@ -1,56 +1,69 @@
 <!doctype html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="main.css"/>
-	<link href="https://fonts.googleapis.com/css?family=Chewy|Open+Sans" rel="stylesheet">
+	<link rel='stylesheet' type='text/css' href='main.css'/>
+	<link href='https://fonts.googleapis.com/css?family=Fredoka+One|Open+Sans|Work+Sans|PT+Sans|Varela+Round' rel='stylesheet'>
+
 	<title>Percy Community Centre</title>
 </head>
 
 <body>
 	<div class='main-nav'>
 		<ul>
-			<li><a href="index.html">Home</a></li>
-				<li><a href="findus.html">Find Us</a></li>
-					<li><a href="contact.html">Contact</a></li>
-						<li><a href="whats-on.html">What's On</a></li>
-		  				<li class="dropdown">
-		    				<a href="#" class="dropbtn">About</a>
-						    <div class="dropdown-content">
-							    <a href="about-main.html">Our History</a>
-							    <a href="about-staff.html">Our Staff</a>
-							    <a href="about-facilities.html">Our Facilities</a>
+			<li><a href='index.html'>Home</a></li>
+				<li><a href='findus.html'>Find Us</a></li>
+					<li><a href='contact.html'>Contact</a></li>
+						<li><a href='whats-on.html'>What's On</a></li>
+		  				<li class='dropdown'>
+		    				<a href='#' class='about-button'>About</a>
+						    <div class='dropdown-content'>
+							    <a href='about-main.html'>Our History</a>
+							    <a href='about-staff.html'>Our Staff</a>
+							    <a href='about-staff.html'>The Facilities</a>
 		    				</div>
+							<li class='dropdown'>
+								<a href='#' class='facilities-button'>Room Hire</a>
+						    <div class='dropdown-content'>
+							    <a href='#'>Conference Room</a>
+							    <a href='#'>Meeting Room</a>
+							    <a href='#'>Recording Studio</a>
+							    <a href='#'>Media Suite</a>
+							    <a href='#'>Sports Hall</a>
+							    <a href='#'>MUGA</a>
 	  				</li>
 			</ul>
 	</div>
+
 
 
 	<div class='main-title'>
 		<h1>
 		Percy Community Centre
 		</h1>
-		</div>
+	</div>
 
-		<div class='main-body'>
-				The Percy Centre is a vibrant and friendly community centre lcated in the heart of Bath.
-				Community resources for personal development and extracurricular activities for all ages -
-				youth projects, music, dance, holiday play groups -
-			</div>
+	<div class='main-header'>
+		<img src='http://i.imgur.com/Ocmuvwv.png'/>
+	</div>
 
-			<div class='main-tagline'>
-				<p1>
-					and so much more!
-				</p1>
-				<br>
-					<p2>
-						Room hire from 9/hr.
-					</p2>
-				</div>
+	<div class='main-body'>
+			The Percy Centre is a vibrant and friendly community centre lcated in the heart of Bath.
+			Community resources for personal development and extracurricular activities for all ages -
+			youth projects, music, dance, holiday play groups -
+	</div>
 
-		<div class='main-footer'>
-			<p>
-				&copy; 2016<script>new Date().getFullYear()>2016&&document.write("-"+new Date().getFullYear());</script>, Percy Community Centre.			</p>
-		</div>
+	<div class='main-tagline'>
+			and so much more!
+	</div>
+
+	<div class='sub-tagline'>
+			Room hire from 9/hr.
+	</div>
+
+	<div class='main-footer'>
+		<p>
+			&copy; 2016<script>new Date().getFullYear()>2016&&document.write('-'+new Date().getFullYear());</script>, Percy Community Centre.			</p>
+	</div>
 
 </body>
 </html>
