updated homepage image

--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
 	</div>
 
 	<div class='main-header'>
-		<img src='http://i.imgur.com/Ocmuvwv.png'/>
+		<!-- NOTE: black outline and dropshadow version here: -->
+		<!-- NOTE: 'http://i.imgur.com/Ocmuvwv.png' -->
+
+		<img src=	'http://i.imgur.com/8aaldbx.png'/>
+
 	</div>
 
 	<div class='main-body'>
