Added charity info to footer

--- a/about-main.html
+++ b/about-main.html
@@ -18,7 +18,7 @@
 								<div class='dropdown-content'>
 									<a href='about-main.html'>Our History</a>
 									<a href='about-staff.html'>Our Staff</a>
-									<a href='about-staff.html'>The Facilities</a>
+									<a href='about-staff.html'>Our Facilities</a>
 								</div>
 							<li class='dropdown'>
 								<a href='#' class='facilities-button'>Room Hire</a>
@@ -63,9 +63,9 @@
 		</div>
 
 		<div class='main-footer'>
-			<p>
-				&copy; 2016<script>new Date().getFullYear()>2016&&document.write("-"+new Date().getFullYear());</script>, Percy Community Centre.			</p>
-			</p>
+				&copy; 2016<script>new Date().getFullYear()>2016&&document.write('-'+new Date().getFullYear());</script>, Percy Community Centre.
+				<br>
+				Percy Community Centre, New King Street, Bath, Somerset, BA1 2BN. Tel. 01225 423014. Charity no. 1127986, Company no. 6769345.
 		</div>
 
 </body>
