--- a/index.html
+++ b/index.html
@@ -4,6 +4,29 @@
 	<link rel='stylesheet' type='text/css' href='main.css'/>
 	<link href='https://fonts.googleapis.com/css?family=Fredoka+One|Open+Sans|Work+Sans|PT+Sans|Varela+Round' rel='stylesheet'>
 
+		<!-- ****** faviconit.com favicons ****** -->
+	<link rel="shortcut icon" href="/assets/favicon.ico">
+	<link rel="icon" sizes="16x16 32x32 64x64" href="/assets/favicon.ico">
+	<link rel="icon" type="image/png" sizes="196x196" href="/assets/favicon-192.png">
+	<link rel="icon" type="image/png" sizes="160x160" href="/assets/favicon-160.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="/assets/favicon-96.png">
+	<link rel="icon" type="image/png" sizes="64x64" href="/assets/favicon-64.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16.png">
+	<link rel="apple-touch-icon" href="/assets/favicon-57.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="/assets/favicon-114.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="/assets/favicon-72.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="/assets/favicon-144.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon-60.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="/assets/favicon-120.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="/assets/favicon-76.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="/assets/favicon-152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon-180.png">
+	<meta name="msapplication-TileColor" content="#FFFFFF">
+	<meta name="msapplication-TileImage" content="/assets/favicon-144.png">
+	<meta name="msapplication-config" content="/browserconfig.xml">
+	<!-- ****** faviconit.com favicons ****** -->
+
 	<title>Percy Community Centre</title>
 </head>
 
@@ -11,26 +34,26 @@
 	<div class='main-nav'>
 		<ul>
 			<li><a href='index.html'>Home</a></li>
-				<li><a href='findus.html'>Find Us</a></li>
+				<li><a href='find-us.html'>Find Us</a></li>
 					<li><a href='contact.html'>Contact</a></li>
 						<li><a href='whats-on.html'>What's On</a></li>
-		  				<li class='dropdown'>
-		    				<a href='#' class='about-button'>About</a>
-						    <div class='dropdown-content'>
-							    <a href='about-main.html'>Our History</a>
-							    <a href='about-staff.html'>Our Staff</a>
-							    <a href='about-staff.html'>Our Facilities</a>
-		    				</div>
+							<li class='dropdown'>
+								<a href='#' class='about-button'>About</a>
+								<div class='dropdown-content'>
+									<a href='about-main.html'>Our History</a>
+									<a href='about-staff.html'>Our Staff</a>
+									<a href='about-staff.html'>Our Facilities</a>
+								</div>
 							<li class='dropdown'>
 								<a href='#' class='facilities-button'>Room Hire</a>
-						    <div class='dropdown-content'>
-							    <a href='#'>Conference Room</a>
-							    <a href='#'>Meeting Room</a>
-							    <a href='#'>Recording Studio</a>
-							    <a href='#'>Media Suite</a>
-							    <a href='#'>Sports Hall</a>
-							    <a href='#'>MUGA</a>
-	  				</li>
+								<div class='dropdown-content'>
+									<a href='#'>Conference Room</a>
+									<a href='#'>Meeting Room</a>
+									<a href='#'>Recording Studio</a>
+									<a href='#'>Media Suite</a>
+									<a href='#'>Sports Hall</a>
+									<a href='#'>MUGA</a>
+						</li>
 			</ul>
 	</div>
 
