--- a/index.html
+++ b/index.html
@@ -34,30 +34,32 @@
 	<div class='main-nav'>
 		<ul>
 			<li><a href='index.html'>Home</a></li>
-				<li><a href='find-us.html'>Find Us</a></li>
-					<li><a href='contact.html'>Contact</a></li>
-						<li><a href='whats-on.html'>What's On</a></li>
-							<li class='dropdown'>
-								<a href='#' class='about-button'>About</a>
-								<div class='dropdown-content'>
-									<a href='about-main.html'>Our History</a>
-									<a href='about-staff.html'>Our Staff</a>
-									<a href='about-staff.html'>Our Facilities</a>
-								</div>
-							<li class='dropdown'>
-								<a href='#' class='facilities-button'>Room Hire</a>
-								<div class='dropdown-content'>
-									<a href='#'>Conference Room</a>
-									<a href='#'>Meeting Room</a>
-									<a href='#'>Recording Studio</a>
-									<a href='#'>Media Suite</a>
-									<a href='#'>Sports Hall</a>
-									<a href='#'>MUGA</a>
-						</li>
-			</ul>
+			<li><a href='find-us.html'>Find Us</a></li>
+			<li><a href='contact.html'>Contact</a></li>
+			<li><a href='calendar.html'>Calendar</a></li>
+			<li><a href='whats-on.html'>What's On</a></li>
+			<li class='dropdown'>
+				<a href='#' class='about-button'>About</a>
+				<div class='dropdown-content'>
+					<a href='about-main.html'>Our History</a>
+					<a href='about-staff.html'>Our Staff</a>
+					<a href='about-staff.html'>Our Facilities</a>
+				</div>
+			<li class='dropdown'>
+				<a href='#' class='facilities-button'>Room Hire</a>
+				<div class='dropdown-content'>
+					<a href='#'>The Den</a>
+					<a href='#'>The Annex</a>
+					<a href='#'>Conference Room</a>
+					<a href='#'>Meeting Room</a>
+					<a href='#'>Recording Studio</a>
+					<a href='#'>Media Suite</a>
+					<a href='#'>Sports Hall</a>
+					<a href='#'>MUGA</a>
+				</div>
+			</li>
+		</ul>
 	</div>
-
-
 
 	<div class='main-title'>
 		<h1>
@@ -74,13 +76,13 @@
 	</div>
 
 	<div class='main-body'>
-			The Percy Centre is a vibrant and friendly community centre lcated in the heart of Bath.
+			The Percy Centre is a vibrant and friendly community centre located in the heart of Bath.
 			Community resources for personal development and extracurricular activities for all ages -
-			youth projects, music, dance, holiday play groups -
+			youth projects, music, dance, holiday play groups...
 	</div>
 
 	<div class='main-tagline'>
-			and so much more!
+			...and so much more!
 	</div>
 
 	<div class='sub-tagline'>
