--- a/whats-on.html
+++ b/whats-on.html
@@ -44,27 +44,31 @@
 	<div class='main-nav'>
 		<ul>
 			<li><a href='index.html'>Home</a></li>
-				<li><a href='find-us.html'>Find Us</a></li>
-					<li><a href='contact.html'>Contact</a></li>
-						<li><a href='whats-on.html'>What's On</a></li>
-							<li class='dropdown'>
-								<a href='#' class='about-button'>About</a>
-								<div class='dropdown-content'>
-									<a href='about-main.html'>Our History</a>
-									<a href='about-staff.html'>Our Staff</a>
-									<a href='about-staff.html'>Our Facilities</a>
-								</div>
-							<li class='dropdown'>
-								<a href='#' class='facilities-button'>Room Hire</a>
-								<div class='dropdown-content'>
-									<a href='#'>Conference Room</a>
-									<a href='#'>Meeting Room</a>
-									<a href='#'>Recording Studio</a>
-									<a href='#'>Media Suite</a>
-									<a href='#'>Sports Hall</a>
-									<a href='#'>MUGA</a>
-						</li>
-			</ul>
+			<li><a href='find-us.html'>Find Us</a></li>
+			<li><a href='contact.html'>Contact</a></li>
+			<li><a href='calendar.html'>Calendar</a></li>
+			<li><a href='whats-on.html'>What's On</a></li>
+			<li class='dropdown'>
+				<a href='#' class='about-button'>About</a>
+				<div class='dropdown-content'>
+					<a href='about-main.html'>Our History</a>
+					<a href='about-staff.html'>Our Staff</a>
+					<a href='about-staff.html'>Our Facilities</a>
+				</div>
+			<li class='dropdown'>
+				<a href='#' class='facilities-button'>Room Hire</a>
+				<div class='dropdown-content'>
+					<a href='#'>The Den</a>
+					<a href='#'>The Annex</a>
+					<a href='#'>Conference Room</a>
+					<a href='#'>Meeting Room</a>
+					<a href='#'>Recording Studio</a>
+					<a href='#'>Media Suite</a>
+					<a href='#'>Sports Hall</a>
+					<a href='#'>MUGA</a>
+				</div>
+			</li>
+		</ul>
 	</div>
 
 
