--- a/index.html
+++ b/index.html
@@ -27,70 +27,35 @@
 	<meta name="msapplication-config" content="/browserconfig.xml">
 	<!-- ****** faviconit.com favicons ****** -->
 
-	<title>Percy Community Centre</title>
+	<title>Teddy South</title>
 </head>
 
 <body>
 	<div class='main-nav'>
 		<ul>
 			<li><a href='index.html'>Home</a></li>
-			<li><a href='find-us.html'>Find Us</a></li>
+			<li><a href='about.html'>About</a></li>
+			<li><a href='portfolio.html'>Portfolio</a></li>
 			<li><a href='contact.html'>Contact</a></li>
-			<li><a href='calendar.html'>Calendar</a></li>
-			<li><a href='whats-on.html'>What's On</a></li>
-			<li class='dropdown'>
-				<a href='#' class='about-button'>About</a>
-				<div class='dropdown-content'>
-					<a href='about-main.html'>Our History</a>
-					<a href='about-staff.html'>Our Staff</a>
-					<a href='about-staff.html'>Our Facilities</a>
-				</div>
-			<li class='dropdown'>
-				<a href='#' class='facilities-button'>Room Hire</a>
-				<div class='dropdown-content'>
-					<a href='#'>The Den</a>
-					<a href='#'>The Annex</a>
-					<a href='#'>Conference Room</a>
-					<a href='#'>Meeting Room</a>
-					<a href='#'>Recording Studio</a>
-					<a href='#'>Media Suite</a>
-					<a href='#'>Sports Hall</a>
-					<a href='#'>MUGA</a>
-				</div>
-			</li>
+			<li><a href='links.html'>Links</a></li>
 		</ul>
 	</div>
 
 	<div class='main-title'>
-		Percy Community Centre
+		TESOU
 	</div>
 
 	<div class='main-header'>
-		<!-- NOTE: black outline and dropshadow version here: -->
-		<!-- NOTE: 'http://i.imgur.com/Ocmuvwv.png' -->
-
-		<img src=	'http://i.imgur.com/8aaldbx.png'/>
 
 	</div>
 
 	<div class='main-body'>
-			The Percy Centre is a vibrant and friendly community centre located in the heart of Bath.
-			Community resources for personal development and extracurricular activities for all ages -
-			youth projects, music, dance, holiday play groups...
+
 	</div>
 
-	<div class='main-tagline'>
-			...and so much more!
-	</div>
-
-	<div class='sub-tagline'>
-			Room hire from 9/hr.
-	</div>
 
 	<div class='main-footer'>
-			&copy; 2016<script>new Date().getFullYear()>2016&&document.write('-'+new Date().getFullYear());</script>, Percy Community Centre.
-			<br>
-			Percy Community Centre, New King Street, Bath, Somerset, BA1 2BN. Tel. 01225 423014. Charity no. 1127986, Company no. 6769345.
+			&copy; 2016<script>new Date().getFullYear()>2016&&document.write('-'+new Date().getFullYear());</script>, Teddy South, TESOU.
 	</div>
 
 </body>
