css color changes and removed old assets

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel='stylesheet' type='text/css' href='main.css'/>
-	<link href='https://fonts.googleapis.com/css?family=Fredoka+One|Open+Sans|Work+Sans|PT+Sans|Varela+Round' rel='stylesheet'>
+	<link href='https://fonts.googleapis.com/css?family=Fredoka+One|Open+Sans|Varela+Round' rel='stylesheet'>
 
 		<!-- ****** faviconit.com favicons ****** -->
 	<link rel="shortcut icon" href="/assets/favicon.ico">
@@ -27,10 +27,11 @@
 	<meta name="msapplication-config" content="/browserconfig.xml">
 	<!-- ****** faviconit.com favicons ****** -->
 
-	<title>Teddy South</title>
+	<title>TESOU</title>
 </head>
 
 <body>
+
 	<div class='main-nav'>
 		<ul>
 			<li><a href='index.html'>Home</a></li>
@@ -41,7 +42,7 @@
 		</ul>
 	</div>
 
-	<div class='main-title'>
+	<div class='site-title'>
 		TESOU
 	</div>
 
