--- a/about.html
+++ b/about.html
@@ -27,65 +27,31 @@
 		<meta name="msapplication-config" content="/browserconfig.xml">
 		<!-- ****** faviconit.com favicons ****** -->
 
-	<title>About the Centre</title>
+	<title>About</title>
 </head>
 
-<body>
-	<div class='main-nav'>
-		<ul>
-			<li><a href='index.html'>Home</a></li>
-			<li><a href='find-us.html'>Find Us</a></li>
-			<li><a href='contact.html'>Contact</a></li>
-			<li><a href='calendar.html'>Calendar</a></li>
-			<li><a href='whats-on.html'>What's On</a></li>
-			<li class='dropdown'>
-				<a href='#' class='about-button'>About</a>
-				<div class='dropdown-content'>
-					<a href='about-main.html'>Our History</a>
-					<a href='about-staff.html'>Our Staff</a>
-					<a href='about-staff.html'>Our Facilities</a>
-				</div>
-			<li class='dropdown'>
-				<a href='#' class='facilities-button'>Room Hire</a>
-				<div class='dropdown-content'>
-					<a href='#'>The Den</a>
-					<a href='#'>The Annex</a>
-					<a href='#'>Conference Room</a>
-					<a href='#'>Meeting Room</a>
-					<a href='#'>Recording Studio</a>
-					<a href='#'>Media Suite</a>
-					<a href='#'>Sports Hall</a>
-					<a href='#'>MUGA</a>
-				</div>
-			</li>
-		</ul>
-	</div>
+<div class='main-nav'>
+	<ul>
+		<li><a href='index.html'>Home</a></li>
+		<li><a href='about.html'>About</a></li>
+		<li><a href='portfolio.html'>Portfolio</a></li>
+		<li><a href='contact.html'>Contact</a></li>
+		<li><a href='links.html'>Links</a></li>
+	</ul>
+</div>
 
 	<div class='main-title'>
-		About the Centre
+		About the Artist
 	</div>
 
 		<div class='main-body'>
-			<h2>
-				The Past
-			</h2>
 			<p>
-			The Percy Community Centre, formerly the Percy Boys Club... [etc]<br>
-			The Centre was founded in ... [etc]<br>
+			Teddy South is a writer and graphic artist based in the southwest of England. She looks a little bit like this:
 			</p>
-			<h2>
-				The Present
-			</h2>
-			<p>
-			The Percy Centre is a hub for community events, extracurricular activity<br>
-			and personal development for people of all ages and from all walks of life.
-			</p>
-			<h2>
-				The Future
-			</h2>
+		</div>
 
-
-
+		<div class='about-image'>
+		<img src='http://i.imgur.com/J296gT2.png'>
 		</div>
 
 		<div class='main-footer'>
