--- a/contact.html
+++ b/contact.html
@@ -27,39 +27,21 @@
 	<meta name="msapplication-config" content="/browserconfig.xml">
 	<!-- ****** faviconit.com favicons ****** -->
 
-	<title>Contact us</title>
+	<title>Contact</title>
 </head>
 
 <body>
+
 	<div class='main-nav'>
 		<ul>
 			<li><a href='index.html'>Home</a></li>
-			<li><a href='find-us.html'>Find Us</a></li>
+			<li><a href='about.html'>About</a></li>
+			<li><a href='portfolio.html'>Portfolio</a></li>
 			<li><a href='contact.html'>Contact</a></li>
-			<li><a href='calendar.html'>Calendar</a></li>
-			<li><a href='whats-on.html'>What's On</a></li>
-			<li class='dropdown'>
-				<a href='#' class='about-button'>About</a>
-				<div class='dropdown-content'>
-					<a href='about-main.html'>Our History</a>
-					<a href='about-staff.html'>Our Staff</a>
-					<a href='about-staff.html'>Our Facilities</a>
-				</div>
-			<li class='dropdown'>
-				<a href='#' class='facilities-button'>Room Hire</a>
-				<div class='dropdown-content'>
-					<a href='#'>The Den</a>
-					<a href='#'>The Annex</a>
-					<a href='#'>Conference Room</a>
-					<a href='#'>Meeting Room</a>
-					<a href='#'>Recording Studio</a>
-					<a href='#'>Media Suite</a>
-					<a href='#'>Sports Hall</a>
-					<a href='#'>MUGA</a>
-				</div>
-			</li>
+			<li><a href='links.html'>Links</a></li>
 		</ul>
 	</div>
+
 
 	<div class='main-title'>
 		Contact us
