--- a/comics.html
+++ b/comics.html
@@ -3,9 +3,8 @@
 <title>TESOU</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="main.css">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 .w3-bar,h1,button {font-family: "Open+Sans", sans-serif}
@@ -46,16 +45,33 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <div class="w3-content">
     <div class="w3-twothird">
       <h1>About the Author</h1>
-      <h5 class="w3-padding-32">Teddy South is a writer and illustrator of graphic novels inspired by the bizarre, the morbid, and the impossible. </h5>
+      <h5 class="w3-padding-32">Teddy South is an artist, illustrator and writer of graphic novels living and working in the Southwest of England, and inspired by the bizarre, the morbid and the fantastic. </h5>
 
-      <p class="w3-text-grey">"Born in the quiet leafy countryside of the southwest of England, I've always been fascinated with quiet and abandonned places.
-      I remember straying from the path whilst on a family holiday in devon once, and finding a huge old tree surrounded by a tiny river; the scene was like something from a fairytale.
-      It was something I never would never have seen, had I not been curious about what lay beyond the path well-trod. I like to think i've held onto the same spirit of curiosity I had as a child,
-      and I hope at least a little of that feeling of wonder at the unknown makes its way into my writing, and the rest of my work."</p>
+      <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+        laboris nisi ut aliquip ex ea commodo consequat.</p>
     </div>
 
     <div class="w3-third w3-center">
-      <img class="w3-image" src="http://i.imgur.com/i5aSftv.jpg">
+      <i class="fa fa-anchor w3-padding-64 w3-text-red"></i>
+    </div>
+  </div>
+</div>
+
+<!-- NOTE: Second Grid -->
+<div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+  <div class="w3-content">
+    <div class="w3-third w3-center">
+      <i class="fa fa-coffee w3-padding-64 w3-text-red w3-margin-right"></i>
+    </div>
+
+    <div class="w3-twothird">
+      <h1>Lorem Ipsum</h1>
+      <h5 class="w3-padding-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
+
+      <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+        laboris nisi ut aliquip ex ea commodo consequat.</p>
     </div>
   </div>
 </div>
