--- a/index.html
+++ b/index.html
@@ -1,63 +1,66 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-	<link rel='stylesheet' type='text/css' href='main.css'/>
-	<link href='https://fonts.googleapis.com/css?family=Fredoka+One|Open+Sans|Varela+Round' rel='stylesheet'>
-
-		<!-- ****** faviconit.com favicons ****** -->
-	<link rel="shortcut icon" href="/assets/favicon.ico">
-	<link rel="icon" sizes="16x16 32x32 64x64" href="/assets/favicon.ico">
-	<link rel="icon" type="image/png" sizes="196x196" href="/assets/favicon-192.png">
-	<link rel="icon" type="image/png" sizes="160x160" href="/assets/favicon-160.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="/assets/favicon-96.png">
-	<link rel="icon" type="image/png" sizes="64x64" href="/assets/favicon-64.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16.png">
-	<link rel="apple-touch-icon" href="/assets/favicon-57.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="/assets/favicon-114.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="/assets/favicon-72.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="/assets/favicon-144.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon-60.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="/assets/favicon-120.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="/assets/favicon-76.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="/assets/favicon-152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon-180.png">
-	<meta name="msapplication-TileColor" content="#FFFFFF">
-	<meta name="msapplication-TileImage" content="/assets/favicon-144.png">
-	<meta name="msapplication-config" content="/browserconfig.xml">
-	<!-- ****** faviconit.com favicons ****** -->
-
-	<title>TESOU</title>
-</head>
-
+<title>TESOU</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
+.w3-bar,h1,button {font-family: "Open+Sans", sans-serif}
+.fa-anchor,.fa-coffee {font-size:200px}
+</style>
 <body>
 
-	<div class='main-nav'>
-		<ul>
-			<li><a href='index.html'>Home</a></li>
-			<li><a href='about.html'>About</a></li>
-			<li><a href='portfolio.html'>Portfolio</a></li>
-			<li><a href='contact.html'>Contact</a></li>
-			<li><a href='links.html'>Links</a></li>
-		</ul>
-	</div>
+<!-- NOTE: Navbar -->
+<div class="w3-top">
+  <div class="w3-bar w3-red w3-card-2 w3-left-align w3-large">
+    <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+    <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
+    <a href="about.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">About</a>
+    <a href="contact.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Contact</a>
+    <a href="comics.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Comics</a>
+  </div>
 
-	<div class='site-title'>
-		TESOU
-	</div>
+  <!-- NOTE: Navbar on small screens -->
+  <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
+    <a href="about.html" class="w3-bar-item w3-button w3-padding-large">About</a>
+    <a href="contact.html" class="w3-bar-item w3-button w3-padding-large">Contact</a>
+    <a href="comics.html" class="w3-bar-item w3-button w3-padding-large">Comics</a>
+  </div>
+</div>
 
-	<div class='main-header'>
+<!-- NOTE: Header -->
+<header class="w3-container w3-red w3-center" style="padding:128px 16px">
+  <h1 class="w3-margin w3-jumbo">Teddy South</h1>
+  <p class="w3-xlarge">Graphic Artist | Writer | Designer</p>
+  <!-- NOTE:
+  <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">Start</button>
+  -->
+</header>
 
-	</div>
+<!-- NOTE: Footer -->
+<footer class="w3-container w3-padding-64 w3-center w3-opacity">
+  <div class="w3-xlarge w3-padding-32">
+    <i class="fa fa-facebook-official w3-hover-opacity"></i>
+    <i class="fa fa-instagram w3-hover-opacity"></i>
+    <i class="fa fa-twitter w3-hover-opacity"></i>
+ </div>
+ &copy; 2016<script>new Date().getFullYear()>2016&&document.write('-'+new Date().getFullYear());</script>, Teddy South, TESOU.
+</footer>
 
-	<div class='main-body'>
-
-	</div>
-
-
-	<div class='main-footer'>
-			&copy; 2016<script>new Date().getFullYear()>2016&&document.write('-'+new Date().getFullYear());</script>, Teddy South, TESOU.
-	</div>
+<script>
+// Used to toggle the menu on small screens when clicking on the menu button
+function myFunction() {
+    var x = document.getElementById("navDemo");
+    if (x.className.indexOf("w3-show") == -1) {
+        x.className += " w3-show";
+    } else {
+        x.className = x.className.replace(" w3-show", "");
+    }
+}
+</script>
 
 </body>
 </html>
