We're back baby

--- a/morte-in-famiglia.html
+++ b/morte-in-famiglia.html
@@ -36,70 +36,65 @@ h1 {font-family: 'Gentium Book Basic', sans-serif}
 
 <body>
 
-<!-- Navbar -->
-<div class='top'>
- <div class='bar  black card-2 large left-align'>
-    <a href='about.html' class='bar-item button hover-white hide-small'><i class='fa fa-home'></i> Home</a>
-       <a class='bar-item button hide-medium hide-large hover-white' href='javascript:void(0);' onclick='openNav()'><i class='fa fa-bars'></i></a>
-    <a href='about.html' class='bar-item button hide-small hover-white'>About</a>
-    <a href='contact.html' class='bar-item button hide-small hover-white'>Contact</a>
-    <div class='dropdown-hover hide-small'>
-    <a href='#' class='button hover-white'>Comics <i class='fa fa-caret-down'></i></a>
-    <div class='dropdown-content card-4 bar-block'>
-      <a href='morte-in-famiglia.html' class='bar-item button medium'>Morte In Famiglia</a>
+  <!-- Navbar -->
+  <div class='top'>
+   <div class='bar black card-2 large left-align'>
+      <a href='index.html' class='bar-item button hover-white hide-small'><i class='fa fa-home'></i> Home</a>
+         <a class='bar-item button hide-medium hide-large hover-white' href='javascript:void(0);' onclick='openNav()'><i class='fa fa-bars'></i></a>
+      <a href='about.html' class='bar-item button hide-small hover-white'>About</a>
+      <a href='#' class='bar-item button hide-small hover-white'>Contact</a>
+      <div class='dropdown-hover hide-small'>
+      <a href='comics.html' class='button hover-white'>Comics <i class='fa fa-caret-down'></i></a>
+      <div class='dropdown-content card-4 bar-block'>
+        <a href='morte-in-famiglia.html' class='bar-item button medium'>Morte In Famiglia</a>
+      </div>
+    </div>
+   </div>
+
+    <!-- Navbar on small screens -->
+    <div id='navMicro' class='bar-block black hide hide-large hide-medium'>
+      <a href='index.html' class='bar-item button large hover-white'><i class='fa fa-home'></i> Home</a>
+      <a href='#' class='bar-item button hover-white'>About</a>
+      <a href='#' class='bar-item button hover-white'>Contact</a>
+      <a href='#' class='bar-item button hover-white'>Morte In Famiglia</a>
     </div>
   </div>
- </div>
 
-  <!-- Navbar on small screens -->
-  <div id='navMicro' class='bar-block  black hide hide-large hide-medium'>
-    <a href='about.html' class='bar-item button large hover-white'><i class='fa fa-home'></i> Home</a>
-    <a href='about.html' class='bar-item button hover-white'>About</a>
-    <a href='contact.html' class='bar-item button hover-white'>Contact</a>
-    <a href='morte-in-famiglia.html' class='bar-item button hover-white'>Morte In Famiglia</a>
-  </div>
-</div>
 
 <!-- Header -->
-<header class='container black center' style='padding:128px 16px'>
-  <h1 class='margin jumbo'>Teddy South</h1>
-  <p class='xlarge'>Graphic Artist | Illustrator | Designer</p>
+<header class='container black center' style='padding:64px 16px'>
+  <h1 class='margin jumbo'>
+    Morte In Famiglia
+  </h1>
+  <p class='xlarge'>
+    A story about death. Mostly.
+  </p>
 </header>
-
 
 <!-- First Grid -->
 <div class='row-padding padding-64 container'>
-  <div class='content' style='width:75%'>
-    <div class='center padding'>
-      <h1 class='xxxlarge'>About the Author</h1>
+  <div class='content' style='width:50%'>
+    <div class='center'>
 
-      <h5 class='padding-8'>
-        Teddy South is a writer and illustrator of graphic novels inspired by
-        the bizarre, the morbid, and the impossible.
-      </h5>
+      <div class='hover-opacity'>
 
-      <div class='padding-32'>
-        <img class='circle border card-4' src='http://i.imgur.com/i5aSftv.jpg' style='width:50%'>
+      <h1 class='xxlarge'>
+        Go to
+      </h1>
+
+      <div>
+          <img src='assets/icon.png' style='width:75%'>
       </div>
 
-      <p class='text-grey'>
-        "Born in the quiet leafy countryside of the southwest of England,
-        I've always been fascinated with quiet and abandonned places.
-        I remember straying from the path whilst on a family holiday in devon once,
-        and finding a huge old tree surrounded by a tiny river; the scene was like
-        something from a fairytale. It was something I never would never have seen,
-        had I not been curious about what lay beyond the path well-trod.
-        I like to think i've held onto the same spirit of curiosity I had as a child,
-        and I hope at least a little of that feeling of wonder at the unknown
-        makes its way into my writing, and the rest of my work."
-      </p>
+      <h1 class='jumbo'>
+        Chapter 1
+      </h1>
 
-
+      </div>
 
     </div>
   </div>
 </div>
-
 
 <!-- Footer -->
 <footer class='container align-bottom card-4 black padding-64 center'>
