--- a/index.html
+++ b/index.html
@@ -1,63 +1,115 @@
 <!DOCTYPE html>
 <html>
 <title>TESOU</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<meta charset='UTF-8'>
+<meta name='viewport' content='width=device-width, initial-scale=1'>
+<link rel='stylesheet' href='main.css'>
+<link rel='stylesheet' href='animate.css'>
+<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Gentium+Book+Basic|Lato'>
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
 <style>
-body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
-.w3-bar,h1,button {font-family: "Open+Sans", sans-serif}
-.fa-anchor,.fa-coffee {font-size:200px}
+.bar,body,h1,h2,h3,h4,h5,h6,button {font-family: 'Lato', sans-serif}
+h1 {font-family: 'Gentium Book Basic', sans-serif}
 </style>
+
+<!-- ****** faviconit.com favicons ****** -->
+<link rel='shortcut icon' href='/favicon.ico'>
+<link rel='icon' sizes='16x16 32x32 64x64' href='/favicon.ico'>
+<link rel='icon' type='image/png' sizes='196x196' href='/favicon-192.png'>
+<link rel='icon' type='image/png' sizes='160x160' href='/favicon-160.png'>
+<link rel='icon' type='image/png' sizes='96x96' href='/favicon-96.png'>
+<link rel='icon' type='image/png' sizes='64x64' href='/favicon-64.png'>
+<link rel='icon' type='image/png' sizes='32x32' href='/favicon-32.png'>
+<link rel='icon' type='image/png' sizes='16x16' href='/favicon-16.png'>
+<link rel='apple-touch-icon' href='/favicon-57.png'>
+<link rel='apple-touch-icon' sizes='114x114' href='/favicon-114.png'>
+<link rel='apple-touch-icon' sizes='72x72' href='/favicon-72.png'>
+<link rel='apple-touch-icon' sizes='144x144' href='/favicon-144.png'>
+<link rel='apple-touch-icon' sizes='60x60' href='/favicon-60.png'>
+<link rel='apple-touch-icon' sizes='120x120' href='/favicon-120.png'>
+<link rel='apple-touch-icon' sizes='76x76' href='/favicon-76.png'>
+<link rel='apple-touch-icon' sizes='152x152' href='/favicon-152.png'>
+<link rel='apple-touch-icon' sizes='180x180' href='/favicon-180.png'>
+<meta name='msapplication-TileColor' content='#FFFFFF'>
+<meta name='msapplication-TileImage' content='/favicon-144.png'>
+<meta name='msapplication-config' content='/browserconfig.xml'>
+<!-- ****** faviconit.com favicons ****** -->
+
 <body>
 
-<!-- NOTE: Navbar -->
-<div class="w3-top">
-  <div class="w3-bar w3-red w3-card-2 w3-left-align w3-large">
-    <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
-    <a href="about.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">About</a>
-    <a href="contact.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Contact</a>
-    <a href="comics.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Comics</a>
+<!-- Navbar -->
+<div class='top'>
+ <div class='bar  black card-2 large left-align'>
+    <a href='about.html' class='bar-item button hover-white hide-small'><i class='fa fa-home'></i> Home</a>
+       <a class='bar-item button hide-medium hide-large hover-white' href='javascript:void(0);' onclick='openNav()'><i class='fa fa-bars'></i></a>
+    <a href='about.html' class='bar-item button hide-small hover-white'>About</a>
+    <a href='contact.html' class='bar-item button hide-small hover-white'>Contact</a>
+    <div class='dropdown-hover hide-small'>
+    <a href='#' class='button hover-white'>Comics <i class='fa fa-caret-down'></i></a>
+    <div class='dropdown-content card-4 bar-block'>
+      <a href='morte-in-famiglia.html' class='bar-item button medium'>Morte In Famiglia</a>
+    </div>
   </div>
+ </div>
 
-  <!-- NOTE: Navbar on small screens -->
-  <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
-    <a href="about.html" class="w3-bar-item w3-button w3-padding-large">About</a>
-    <a href="contact.html" class="w3-bar-item w3-button w3-padding-large">Contact</a>
-    <a href="comics.html" class="w3-bar-item w3-button w3-padding-large">Comics</a>
+  <!-- Navbar on small screens -->
+  <div id='navMicro' class='bar-block  black hide hide-large hide-medium'>
+    <a href='about.html' class='bar-item button large hover-white'><i class='fa fa-home'></i> Home</a>
+    <a href='about.html' class='bar-item button hover-white'>About</a>
+    <a href='contact.html' class='bar-item button hover-white'>Contact</a>
+    <a href='morte-in-famiglia.html' class='bar-item button hover-white'>Morte In Famiglia</a>
   </div>
 </div>
 
-<!-- NOTE: Header -->
-<header class="w3-container w3-red w3-center" style="padding:128px 16px">
-  <h1 class="w3-margin w3-jumbo">Teddy South</h1>
-  <p class="w3-xlarge">Graphic Artist | Writer | Designer</p>
-  <!-- NOTE:
-  <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">Start</button>
-  -->
+
+<!-- Header -->
+<header class='container black center' style='padding:64px 16px'>
+  <h1 class='jumbo'>
+    TESOU
+  </h1>
+  <p class='xlarge'>
+      Welcome to my shitty website
+  </p>
 </header>
 
-<!-- NOTE: Footer -->
-<footer class="w3-container w3-padding-64 w3-center w3-opacity">
-  <div class="w3-xlarge w3-padding-32">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
+<!-- First Grid -->
+<div class='row-padding padding-64 container'>
+  <div class='content' style='width:50%'>
+    <div class='center'>
+      <a class='twitter-timeline'
+        data-lang='en'
+        data-width='500'
+        data-height='500'
+        data-theme='dark'
+        data-link-color='#2B7BB9'
+        href='https://twitter.com/TeddySouth_'>Tweets by TeddySouth_
+    </a>
+    <script async src='//platform.twitter.com/widgets.js' charset='utf-8'></script>
+    </div>
+  </div>
+</div>
+
+<!-- Footer -->
+<footer class='container align-bottom card-4 black padding-64 center'>
+  <div class='xxlarge padding-32'>
+    <i class='fa fa-facebook-official hover-opacity'></i>
+    <i class='fa fa-twitter hover-opacity'></i>
+    <i class='fa fa-instagram hover-opacity'></i>
  </div>
+
+ <p class='small'>
  &copy; 2016<script>new Date().getFullYear()>2016&&document.write('-'+new Date().getFullYear());</script>, Teddy South, TESOU.
+ </p>
 </footer>
 
 <script>
-// Used to toggle the menu on small screens when clicking on the menu button
-function myFunction() {
-    var x = document.getElementById("navDemo");
-    if (x.className.indexOf("w3-show") == -1) {
-        x.className += " w3-show";
+// Used to toggle the menu on smaller screens when clicking on the menu button
+function openNav() {
+    var x = document.getElementById('navMicro');
+    if (x.className.indexOf('show') == -1) {
+        x.className += ' show';
     } else {
-        x.className = x.className.replace(" w3-show", "");
+        x.className = x.className.replace(' show', '');
     }
 }
 </script>
